--- a/README
+++ b/README
@@ -22,7 +22,8 @@ for execution.
 Syntax:
 
 * To create an initial conditions snapshot with cluster.py:
-    cd cluster/ python cluster.py [FILE]
+    cd cluster/
+    python cluster.py [FILE]
 
 * To create density and average squared radial speed distributions plots
   for a given snapshot (the output will be the creation of two images
