--- a/README
+++ b/README
@@ -37,4 +37,7 @@ Author:
     Undergraduate student at Universidade de São Paulo (USP), Brazil
     Contact: bluewhale [at] cecm.usp.br
 
+Credits for Dr. Rubens Machado (http://www.astro.iag.usp.br/~rgmachado/),
+for the vital support and suggestions.
+
 ===============================================================
