--- a/README
+++ b/README
@@ -36,7 +36,7 @@ Optional arguments:
   -o init.dat  The name of the output file.
 
 
-profiles.py [-h] [--gas-core] [--dm-core] -i file.dat
+profiles.py [-h] [--gas-core] [--dm-core] file.dat
 
 Plots stuff.
 
