--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 ===============================================================
 
-Required libraries (and the names of the packages in Ubuntu):
+## Required libraries
+(and the names of the packages in Ubuntu):
 
 NumPy (python-numpy)
 SciPy (python-scipy)
